day 2 anchor tag

--- a/front page.html
+++ b/front page.html
@@ -112,7 +112,7 @@
                     <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQLLqrXej0iRSTT2ElXTWRHV4ipW9ymDoq3zA&s" alt="Diet Plan 3">
                     <h3>Diet Plan 2</h3>
                     <p>Description of Diet Plan 2</p>
-                    <a href="#">Learn More</a>
+                    <a href="day-2 diet chart.html">Learn More</a>
                 </div>
            
             <div class="content">
