day 3,4 anchir tag

--- a/front page.html
+++ b/front page.html
@@ -126,7 +126,7 @@
                 <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSgmHgVT3n4qHoXgJEUpBju0Nmd8QTl_V_AHrKAnnUglI7FKtTEgurCpW_DRKaE9Z_zswc&usqp=CAU" alt="Diet Plan 3">
                 <h3>Diet Plan 3</h3>
                 <p>Description of Diet Plan 3</p>
-                <a href="#">Learn More</a>
+                <a href="day-3 diet chart.html">Learn More</a>
             </div>
             <div class="content">
                 <div class="diet-plan">
@@ -139,7 +139,7 @@
                 <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSipTfl_KnieqlF_XHkAlsx8a5tWtPbg4_VFA&s" alt="Diet Plan 4">
                 <h3>Diet Plan 4</h3>
                 <p>Description of Diet Plan 4</p>
-                <a href="#">Learn More</a>
+                <a href="day-4 diet chart.html">Learn More</a>
             </div>
             <div class="content">
                 <div class="diet-plan">
