--- a/front page.html
+++ b/front page.html
@@ -152,7 +152,7 @@
                 <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQa7RaHASwUnFcJUJzcdbsW3twAH89l-KB09w&s" alt="Diet Plan 4">
                 <h3>Diet Plan 5</h3>
                 <p>Description of Diet Plan 5</p>
-                <a href="#">Learn More</a>
+                <a href="day-5 diet chart.html">Learn More</a>
             </div>
             <div class="content">
                 <div class="diet-plan">
@@ -165,7 +165,7 @@
                 <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQ6R4WRv7hiADR_jILqClVf-TbYlquuCdOYQA&s" alt="Diet Plan 4">
                 <h3>Diet Plan 6</h3>
                 <p>Description of Diet Plan 6</p>
-                <a href="#">Learn More</a>
+                <a href="day-6 diet chart.html">Learn More</a>
             </div>
             <div class="content">
                 <div class="diet-plan">
@@ -178,7 +178,7 @@
                 <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSoC6OXFDvcE3v8b5qPZWhFd1-KNVuk5EoOeg&s" alt="Diet Plan 4">
                 <h3>Diet Plan 7</h3>
                 <p>Description of Diet Plan 7</p>
-                <a href="#">Learn More</a>
+                <a href="day-7 diet chart.html">Learn More</a>
             </div>
             <div class="content">
                 <div class="diet-plan">
