--- a/index.html
+++ b/index.html
@@ -30,6 +30,11 @@
 
   <!-- Hero Section -->
   <section id="home" class="hero-section">
+    <div class="image-slider">
+      <div class="slide active" style="background-image: url('images/slide1.jpg');"></div>
+      <div class="slide" style="background-image: url('images/slide2.jpg');"></div>
+      <div class="slide" style="background-image: url('images/slide3.jpg');"></div>
+    </div>
     <div class="container">
       <div class="hero-content">
         <h1>Your Health, Our Priority</h1>
@@ -43,7 +48,7 @@
   <section id="about" class="about-section">
     <div class="container">
       <h2>About Us</h2>
-      <p>We are a team of experienced dieticians dedicated to improving your health through personalized nutrition plans.</p>
+      <p style="text-align: center;font-size: 20px;">We are a team of experienced dieticians dedicated to improving your health through personalized nutrition plans.</p>
     </div>
   </section>
 
@@ -98,3 +103,9 @@
 </body>
 
 </html>
+
+
+  
+        
+
+  
