--- a/health.html
+++ b/health.html
@@ -1,79 +1,58 @@
-<!DOCTYPE html>
+!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Our Services - Dietician Healthcare</title>
+  <title>Privacy Policy - Dietician Healthcare</title>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
   <link rel="stylesheet" href="style.css">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
 </head>
+
 <body>
+  <!-- Header -->
   <header class="header">
     <div class="container">
-      <a href="index.html" class="logo">Dietician Healthcare</a>
+      <a href="#" class="logo"><i class="fas fa-carrot"></i> Dietician</a> <!-- Added Font Awesome icon -->
       <nav class="navbar">
         <ul class="navbar-list">
-          <li><a href="index.html" class="navbar-link">Home</a></li>
-          <li><a href="about.html" class="navbar-link">About</a></li>
-          <li><a href="services.html" class="navbar-link">Services</a></li>
-          <li><a href="blog.html" class="navbar-link">Blog</a></li>
-          <li><a href="contact.html" class="navbar-link">Contact</a></li>
-          <li><a href="privacy-policy.html" class="navbar-link">Privacy Policy</a></li>
+          <li><a href="#home" class="navbar-link">Home</a></li>
+          <li><a href="#about" class="navbar-link">About</a></li>
+          <li><a href="#services" class="navbar-link">Services</a></li>
+          <li><a href="#contact" class="navbar-link">Contact</a></li>
         </ul>
       </nav>
     </div>
   </header>
 
-  <section class="services-section">
+  <!-- Privacy Policy Section -->
+  <section id="privacy-policy" class="privacy-policy-section">
     <div class="container">
-      <h2>Our Services</h2>
-      <div class="services-grid">
-        <div class="service-card">
-          <div class="service-icon"><i class="fas fa-apple-alt"></i></div>
-          <h3>Nutrition Counseling</h3>
-          <p>Personalized nutrition counseling to help you achieve your health and wellness goals.</p>
-        </div>
-        <div class="service-card">
-          <div class="service-icon"><i class="fas fa-heartbeat"></i></div>
-          <h3>Health Assessments</h3>
-          <p>Comprehensive health assessments to understand your nutritional needs and status.</p>
-        </div>
-        <div class="service-card">
-          <div class="service-icon"><i class="fas fa-running"></i></div>
-          <h3>Fitness Planning</h3>
-          <p>Customized fitness plans designed to complement your nutritional goals.</p>
-        </div>
-        <div class="service-card">
-          <div class="service-icon"><i class="fas fa-leaf"></i></div>
-          <h3>Weight Management</h3>
-          <p>Effective weight management strategies tailored to your lifestyle.</p>
-        </div>
-        <div class="service-card">
-          <div class="service-icon"><i class="fas fa-hands-helping"></i></div>
-          <h3>Support Groups</h3>
-          <p>Join our support groups for motivation and shared experiences.</p>
-        </div>
-        <div class="service-card">
-          <div class="service-icon"><i class="fas fa-seedling"></i></div>
-          <h3>Plant-Based Diets</h3>
-          <p>Guidance on transitioning to and maintaining a healthy plant-based diet.</p>
-        </div>
+      <h1><i class="fas fa-user-secret"></i> Privacy Policy</h1> <!-- Added Font Awesome icon -->
+      <div class="privacy-content">
+        <ul>
+          <li>Your privacy is important to us.</li>
+          <li>We are committed to protecting your personal information.</li>
+          <li>We collect and use your personal data for the purpose of providing our services.</li>
+          <li>We do not share your information with third parties without your consent.</li>
+          <li>You have the right to access and update your personal information at any time.</li>
+          <li>By using our services, you agree to our Privacy Policy.</li>
+        </ul>
       </div>
     </div>
   </section>
 
+  <!-- Footer -->
   <footer class="footer">
     <div class="container">
       <p>&copy; 2024 Dietician Healthcare. All rights reserved.</p>
-      <div class="social-media">
-        <a href="#" class="social-icon"><i class="fab fa-facebook-f"></i></a>
-        <a href="#" class="social-icon"><i class="fab fa-twitter"></i></a>
-        <a href="#" class="social-icon"><i class="fab fa-instagram"></i></a>
-        <a href="#" class="social-icon"><i class="fab fa-linkedin-in"></i></a>
-      </div>
     </div>
   </footer>
 
   <script src="script.js"></script>
 </body>
+
 </html>
+
+      
+         
